--- a/css/main.css
+++ b/css/main.css
@@ -33,7 +33,7 @@ html {
 }
 
 body {
-    background-color: rgb(250, 250, 250);
+    background-color: #fafafa;
     height: 100%;
 }
 
